--- a/index.html
+++ b/index.html
@@ -12,26 +12,39 @@
 <body>
 
   <!-- Rating state start -->
-
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
+  
+  <div class="container">
+    <div class="card">
+      <span class="star-container">
+        <img src="/images/icon-star.svg" alt="Star">
+      </span>
+      <h1>
+        How did we do?
+      </h1>
+      <p>
+        Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
+      </p>
+      <div class="raiting">
+        <div><span class="item">1</span></div>
+        <div><span class="item">2</span></div>
+        <div><span class="item">3</span></div>
+        <div><span class="item">4</span></div>
+        <div><span class="item">5</span></div>
+      </div>
+      <button type="submit">Submit</button>  
+    </div>
+  </div>
 
   <!-- Rating state end -->
 
   <!-- Thank you state start -->
 
-  You selected <!-- Add rating here --> out of 5
+  <!-- You selected <-- Add rating here -> out of 5
 
   Thank you!
 
   We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+  don’t hesitate to get in touch! -->
 
   <!-- Thank you state end -->
 
