--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 
-  <!-- Rating state start -->
-  
   <div class="container">
-    <div class="card">
+
+    <!-- Rating state start -->
+    <div class="card choose-rating">
       <span class="star-container">
         <img src="/images/icon-star.svg" alt="Star">
       </span>
@@ -24,34 +24,34 @@
       <p>
         Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
       </p>
-      <div class="raiting">
-        <div><span class="item">1</span></div>
-        <div><span class="item">2</span></div>
-        <div><span class="item">3</span></div>
-        <div><span class="item">4</span></div>
-        <div><span class="item">5</span></div>
+      <div class="rating">
+        <div><span class="item" id="rating-1">1</span></div>
+        <div><span class="item" id="rating-2">2</span></div>
+        <div><span class="item" id="rating-3">3</span></div>
+        <div><span class="item" id="rating-4">4</span></div>
+        <div><span class="item" id="rating-5">5</span></div>
       </div>
-      <button type="submit">Submit</button>  
+      <button id="rating-submit" type="submit">Submit</button>  
     </div>
+    <!-- Rating state end -->
+    <!-- Thank you state start -->
+    <div class="card thank-you">
+      <img src="/images/illustration-thank-you.svg" alt="Thank you!">
+      <p class="rated">You select <span id="rated"></span> our of 5</p>
+      <h1>Thank you!</h1>
+      <p>
+        We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!
+      </p>
+    </div>
+    <!-- Thank you state end -->
   </div>
-
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  <!-- You selected <-- Add rating here -> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch! -->
-
-  <!-- Thank you state end -->
 
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Nestor Otondo</a>.
   </div>
+
+  <script src="/js/script.js"></script>
 </body>
 </html>
