Fixing url path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Rating state start -->
     <div class="card choose-rating">
       <span class="star-container">
-        <img src="/images/icon-star.svg" alt="Star">
+        <img src="images/icon-star.svg" alt="Star">
       </span>
       <h1>
         How did we do?
@@ -36,7 +36,7 @@
     <!-- Rating state end -->
     <!-- Thank you state start -->
     <div class="card thank-you">
-      <img src="/images/illustration-thank-you.svg" alt="Thank you!">
+      <img src="images/illustration-thank-you.svg" alt="Thank you!">
       <p class="rated">You select <span id="rated"></span> our of 5</p>
       <h1>Thank you!</h1>
       <p>
@@ -52,6 +52,6 @@
     Coded by <a href="#">Nestor Otondo</a>.
   </div>
 
-  <script src="/js/script.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
