--- a/index.html
+++ b/index.html
@@ -15,21 +15,15 @@
 
     <!-- Rating state start -->
     <div class="card choose-rating">
-      <span class="star-container">
-        <img src="images/icon-star.svg" alt="Star">
-      </span>
-      <h1>
-        How did we do?
-      </h1>
-      <p>
-        Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!
-      </p>
+      <span class="star-container"><img src="images/icon-star.svg" alt="Star"></span>
+      <h1>How did we do?</h1>
+      <p>Please let us know how we did with your support request. All feedback is appreciated to help us improve our offering!</p>
       <div class="rating">
-        <div><span class="item" id="rating-1">1</span></div>
-        <div><span class="item" id="rating-2">2</span></div>
-        <div><span class="item" id="rating-3">3</span></div>
-        <div><span class="item" id="rating-4">4</span></div>
-        <div><span class="item" id="rating-5">5</span></div>
+        <div class="item" id="rating-1">1</div>
+        <div class="item" id="rating-2">2</div>
+        <div class="item" id="rating-3">3</div>
+        <div class="item" id="rating-4">4</div>
+        <div class="item" id="rating-5">5</div>
       </div>
       <button id="rating-submit" type="submit">Submit</button>  
     </div>
@@ -39,9 +33,7 @@
       <img src="images/illustration-thank-you.svg" alt="Thank you!">
       <p class="rated">You select <span id="rated"></span> our of 5</p>
       <h1>Thank you!</h1>
-      <p>
-        We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!
-      </p>
+      <p>We appreciate you taking the time to give a rating. If you ever need more support, don't hesitate to get in touch!</p>
     </div>
     <!-- Thank you state end -->
   </div>
